--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,16 +1,20 @@
-<!-- polls/templates/polls/detail.html -->
+{% extends 'base_generic.html' %}
 
-<h1>{{ question.question_text }}</h1>
+{% block title %}{{ question.question_text }}{% endblock %}
 
-{% if error_message %}
-<p><strong>{{ error_message }}</strong></p>
-{% endif %}
+{% block content %}
+  <h1>{{ question.question_text }}</h1>
 
-<form action="{% url 'polls:vote' question.id %}" method="post">
-    {% csrf_token %}
-    {% for choice in question.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
-    {% endfor %}
-    <button type="submit">Vote</button>
-</form>
+  {% if error_message %}
+  <p><strong>{{ error_message }}</strong></p>
+  {% endif %}
+
+  <form action="{% url 'polls:vote' question.id %}" method="post">
+      {% csrf_token %}
+      {% for choice in question.choice_set.all %}
+          <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+          <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+      {% endfor %}
+      <button type="submit">Vote</button>
+  </form>
+{% endblock %}
