--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Polls Index</title>
-</head>
-<body>
-    <h1>{{ latest_question_list }}</h1>
-    {% if latest_question_list %}
-        <ul>
-        {% for question in latest_question_list %} 
-            <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>No polls are available.</p>
-    {% endif %}
-</body>
-</html>
+<!-- polls/templates/polls/index.html -->
+
+{% extends 'base_generic.html' %}
+
+{% block title %}Polls Index{% endblock %}
+
+{% block content %}
+  <h1>Polls Index</h1>
+  {% if latest_question_list %}
+      <ul>
+      {% for question in latest_question_list %}
+          <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+      {% endfor %}
+      </ul>
+  {% else %}
+      <p>No polls are available.</p>
+  {% endif %}
+{% endblock %}
