--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,18 +1,31 @@
-<!-- polls/templates/polls/index.html -->
-
 {% extends 'base_generic.html' %}
+    {% block title %}Polls Index{% endblock %}
+    {% block content %}
+    <h1>Polls Index</h1>
+    {% if page_obj %}
+    <ul>
+        {% for question in page_obj %}
+        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+        {% endfor %}
+    </ul>
+    <div class="paginator">
+        <span class="page-links">
+            {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number}}">Previous</a>
+            {% endif %}
 
-{% block title %}Polls Index{% endblock %}
+            <span class="current">
+                page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
 
-{% block content %}
-  <h1>Polls Index</h1>
-  {% if latest_question_list %}
-      <ul>
-      {% for question in latest_question_list %}
-          <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-      {% endfor %}
-      </ul>
-  {% else %}
-      <p>No polls are available.</p>
-  {% endif %}
-{% endblock %}
+            {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">Next</a>
+            <a href="?page={{ page_obj.next_paginator.num_pages }}">Last</a>
+            {% endif %}
+        </span>
+    </div>
+    {% else %}
+    <h2>No polls are available.</h2>
+    {% endif %}
+    {% endblock %}
